samples/_failures_safe/1761393125_ba7d29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4266f241.c: In function ‘main’:
./samples/SAFE/__tmp_4266f241.c:156:5: error: expected expression at end of input
  156 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_4266f241.c:156:5: error: expected declaration or statement at end of input
